# rusty-full-stack-app

backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: login.rs  mod.rs  protected.rs  register.rs
frontend/: pnpm-lock.yaml
frontend/src/app/login/: page.tsx
frontend/src/app/protected/: page.tsx
frontend/src/app/register/: page.tsx
